qt/gen_qsplitter.h

class QMetaObject;
class QSize;
class QSplitter;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QSplitter QSplitter;
typedef struct QSplitterHandle QSplitterHandle;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QSplitterHandle_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QSplitterHandle_override_virtual_enterEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_enterEvent(void* self, QEvent* event);
bool QSplitterHandle_override_virtual_leaveEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_leaveEvent(void* self, QEvent* event);
bool QSplitterHandle_override_virtual_moveEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QSplitterHandle_override_virtual_closeEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QSplitterHandle_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QSplitterHandle_override_virtual_tabletEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QSplitterHandle_override_virtual_actionEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QSplitterHandle_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QSplitterHandle_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QSplitterHandle_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QSplitterHandle_override_virtual_dropEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QSplitterHandle_override_virtual_showEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_showEvent(void* self, QShowEvent* event);
bool QSplitterHandle_override_virtual_hideEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QSplitterHandle_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QSplitterHandle_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QSplitterHandle_override_virtual_changeEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_changeEvent(void* self, QEvent* param1);
bool QSplitterHandle_override_virtual_metric(void* self, intptr_t slot);
int QSplitterHandle_virtualbase_metric(const void* self, int param1);
bool QSplitterHandle_override_virtual_initPainter(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_initPainter(const void* self, QPainter* painter);
bool QSplitterHandle_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QSplitterHandle_virtualbase_redirected(const void* self, QPoint* offset);
bool QSplitterHandle_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QSplitterHandle_virtualbase_sharedPainter(const void* self);
bool QSplitterHandle_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QSplitterHandle_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QSplitterHandle_virtualbase_inputMethodQuery(const void* self, int param1);
bool QSplitterHandle_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QSplitterHandle_virtualbase_focusNextPrevChild(void* self, bool next);
bool QSplitterHandle_override_virtual_eventFilter(void* self, intptr_t slot);
bool QSplitterHandle_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QSplitterHandle_override_virtual_timerEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QSplitterHandle_override_virtual_childEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_childEvent(void* self, QChildEvent* event);
bool QSplitterHandle_override_virtual_customEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_customEvent(void* self, QEvent* event);
bool QSplitterHandle_override_virtual_connectNotify(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QSplitterHandle_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QSplitterHandle_staticMetaObject();
void QSplitterHandle_delete(QSplitterHandle* self);