qt/gen_qsplitter.nim

proc fQSplitterHandle_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_focusOutEvent".}
proc fcQSplitterHandle_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_focusOutEvent".}
proc fQSplitterHandle_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_enterEvent".}
proc fcQSplitterHandle_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_enterEvent".}
proc fQSplitterHandle_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_leaveEvent".}
proc fcQSplitterHandle_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_leaveEvent".}
proc fQSplitterHandle_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_moveEvent".}
proc fcQSplitterHandle_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_moveEvent".}
proc fQSplitterHandle_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_closeEvent".}
proc fcQSplitterHandle_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_closeEvent".}
proc fQSplitterHandle_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_contextMenuEvent".}
proc fcQSplitterHandle_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_contextMenuEvent".}
proc fQSplitterHandle_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_tabletEvent".}
proc fcQSplitterHandle_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_tabletEvent".}
proc fQSplitterHandle_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_actionEvent".}
proc fcQSplitterHandle_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_actionEvent".}
proc fQSplitterHandle_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_dragEnterEvent".}
proc fcQSplitterHandle_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_dragEnterEvent".}
proc fQSplitterHandle_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_dragMoveEvent".}
proc fcQSplitterHandle_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_dragMoveEvent".}
proc fQSplitterHandle_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_dragLeaveEvent".}
proc fcQSplitterHandle_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_dragLeaveEvent".}
proc fQSplitterHandle_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_dropEvent".}
proc fcQSplitterHandle_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_dropEvent".}
proc fQSplitterHandle_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_showEvent".}
proc fcQSplitterHandle_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_showEvent".}
proc fQSplitterHandle_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_hideEvent".}
proc fcQSplitterHandle_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_hideEvent".}
proc fQSplitterHandle_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QSplitterHandle_virtualbase_nativeEvent".}
proc fcQSplitterHandle_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_nativeEvent".}
proc fQSplitterHandle_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QSplitterHandle_virtualbase_changeEvent".}
proc fcQSplitterHandle_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_changeEvent".}
proc fQSplitterHandle_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QSplitterHandle_virtualbase_metric".}
proc fcQSplitterHandle_override_virtual_metric(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_metric".}
proc fQSplitterHandle_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QSplitterHandle_virtualbase_initPainter".}
proc fcQSplitterHandle_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_initPainter".}
proc fQSplitterHandle_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QSplitterHandle_virtualbase_redirected".}
proc fcQSplitterHandle_override_virtual_redirected(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_redirected".}
proc fQSplitterHandle_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QSplitterHandle_virtualbase_sharedPainter".}
proc fcQSplitterHandle_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_sharedPainter".}
proc fQSplitterHandle_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QSplitterHandle_virtualbase_inputMethodEvent".}
proc fcQSplitterHandle_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_inputMethodEvent".}
proc fQSplitterHandle_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QSplitterHandle_virtualbase_inputMethodQuery".}
proc fcQSplitterHandle_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_inputMethodQuery".}
proc fQSplitterHandle_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QSplitterHandle_virtualbase_focusNextPrevChild".}
proc fcQSplitterHandle_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_focusNextPrevChild".}
proc fQSplitterHandle_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QSplitterHandle_virtualbase_eventFilter".}
proc fcQSplitterHandle_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_eventFilter".}
proc fQSplitterHandle_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_timerEvent".}
proc fcQSplitterHandle_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_timerEvent".}
proc fQSplitterHandle_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_childEvent".}
proc fcQSplitterHandle_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_childEvent".}
proc fQSplitterHandle_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_customEvent".}
proc fcQSplitterHandle_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_customEvent".}
proc fQSplitterHandle_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QSplitterHandle_virtualbase_connectNotify".}
proc fcQSplitterHandle_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_connectNotify".}
proc fQSplitterHandle_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QSplitterHandle_virtualbase_disconnectNotify".}
proc fcQSplitterHandle_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_disconnectNotify".}
proc fcQSplitterHandle_staticMetaObject(): pointer {.importc: "QSplitterHandle_staticMetaObject".}
proc fcQSplitterHandle_delete(self: pointer) {.importc: "QSplitterHandle_delete".}


func init*(T: type QSplitter, h: ptr cQSplitter): QSplitter =
  T(h: h)
proc create*(T: type QSplitter, parent: gen_qwidget.QWidget): QSplitter =

  QSplitter.init(fcQSplitter_new(parent.h))
proc create*(T: type QSplitter, ): QSplitter =

  QSplitter.init(fcQSplitter_new2())
proc create*(T: type QSplitter, param1: gen_qnamespace.Orientation): QSplitter =

  QSplitter.init(fcQSplitter_new3(cint(param1)))
proc create*(T: type QSplitter, param1: gen_qnamespace.Orientation, parent: gen_qwidget.QWidget): QSplitter =

  QSplitter.init(fcQSplitter_new4(cint(param1), parent.h))
proc metaObject*(self: QSplitter, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQSplitter_metaObject(self.h))

proc metacast*(self: QSplitter, param1: cstring): pointer =

  fcQSplitter_metacast(self.h, param1)

proc metacall*(self: QSplitter, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQSplitter_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QSplitter, s: cstring): string =

  let v_ms = fcQSplitter_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QSplitter, s: cstring): string =

  let v_ms = fcQSplitter_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addWidget*(self: QSplitter, widget: gen_qwidget.QWidget): void =

  fcQSplitter_addWidget(self.h, widget.h)

proc insertWidget*(self: QSplitter, index: cint, widget: gen_qwidget.QWidget): void =

  fcQSplitter_insertWidget(self.h, index, widget.h)

proc replaceWidget*(self: QSplitter, index: cint, widget: gen_qwidget.QWidget): gen_qwidget.QWidget =

  gen_qwidget.QWidget(h: fcQSplitter_replaceWidget(self.h, index, widget.h))

proc setOrientation*(self: QSplitter, orientation: gen_qnamespace.Orientation): void =

  fcQSplitter_setOrientation(self.h, cint(orientation))

proc orientation*(self: QSplitter, ): gen_qnamespace.Orientation =

  gen_qnamespace.Orientation(fcQSplitter_orientation(self.h))

proc setChildrenCollapsible*(self: QSplitter, childrenCollapsible: bool): void =

  fcQSplitter_setChildrenCollapsible(self.h, childrenCollapsible)

proc childrenCollapsible*(self: QSplitter, ): bool =

  fcQSplitter_childrenCollapsible(self.h)

proc setCollapsible*(self: QSplitter, index: cint, param2: bool): void =

  fcQSplitter_setCollapsible(self.h, index, param2)

proc isCollapsible*(self: QSplitter, index: cint): bool =

  fcQSplitter_isCollapsible(self.h, index)

proc setOpaqueResize*(self: QSplitter, ): void =

  fcQSplitter_setOpaqueResize(self.h)

proc opaqueResize*(self: QSplitter, ): bool =

  fcQSplitter_opaqueResize(self.h)

proc refresh*(self: QSplitter, ): void =

  fcQSplitter_refresh(self.h)

proc sizeHint*(self: QSplitter, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQSplitter_sizeHint(self.h))

proc minimumSizeHint*(self: QSplitter, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQSplitter_minimumSizeHint(self.h))

proc sizes*(self: QSplitter, ): seq[cint] =

  var v_ma = fcQSplitter_sizes(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc setSizes*(self: QSplitter, list: seq[cint]): void =

  var list_CArray = newSeq[cint](len(list))
  for i in 0..<len(list):
    list_CArray[i] = list[i]

  fcQSplitter_setSizes(self.h, struct_miqt_array(len: csize_t(len(list)), data: if len(list) == 0: nil else: addr(list_CArray[0])))

proc saveState*(self: QSplitter, ): seq[byte] =
